<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Inovex App</string>
    <string name="enter_receipt">enter receipt</string>
    <string name="enter_journey">start new journey</string>
    <string name="enter_time">enter time</string>
    <string name="enter_start_time">enter start time</string>
    <string name="enter_end_time">enter end time</string>
    <string name="list_journeys">my journeys</string>
    <string name="list_receipts">my receipts</string>
    <string name="list_contacts">contacts</string>
    <string name="starting_place">starting_place</string>
    <string name="description">description</string>
    <string name="return_journey">return journey</string>
    <string name="arrival">arrival</string>
    <string name="ok">Ok</string>
    <string name="destination">destination</string>
    <string name="continuation_of_journey">continuation</string>
    <string name="error_saving_journey">error saving your journey</string>
    <string name="to">to</string>
    <string name="from">from</string>
    <string name="receipt">receipt</string>
    <string name="journey_end_time">arrival</string>
    <string name="journey_start_time">departure</string>
    <string name="label_receipt_button">show\nreceipts</string>
    <string name="list_times">my times</string>
    <string name="project">project</string>
    <string name="work_start_time">start time</string>
    <string name="work_end_time">end time</string>
    <string name="work_total_time">total time</string>
    <string name="work_time">00:00</string>
    <string name="company_name">inovex</string>
    <string name="sum_of_receipts">receipt sum</string>
    <string name="open_tasks">open tasks</string>
    <string name="time_recording">record your time!</string>
    <string name="in_time">in</string>
    <string name="out_time">out</string>
    <string name="total_time_month">working time</string>
    <string name="total_time">total</string>
    <string name="break_time">break</string>
    <string name="saldo_time">saldo</string>
    <string name="check_in">check in now</string>
    <string name="check_out">check out now</string>
    <string name="journey_recording">manage your journeys</string>
    <string name="new_return_journey">start return journey</string>
    <string name="new_continuation_journey">continue journey</string>
    <string name="finish_journey">finish journey</string>
    <string name="data_is_ok">All your time and journey records are up to date and consistent!</string>
    <string name="manage_records">data overview</string>
    <string name="end_journey">end journey</string>
    <string name="start">start</string>
    <string name="starting_point">starting point</string>
    <string name="current_time">now!</string>
    <string name="error_saving_time">error saving your time</string>
    <string name="start_time">start time</string>
    <string name="end_time">end time</string>
    <string name="end_place">end place</string>
    <string name="search_label">Search</string>
    <string name="search_results_for">Search results for \'%s\':</string>
    <string name="show_all">Show All</string>
    <string name="email_type">Email %s</string>
    <string name="call_type">Call %s</string>
    <string name="home">home</string>
    <string name="mobile">mobile</string>
    <string name="work">work</string>
    <string name="organization">Organization</string>
    <string name="skills">Skills</string>
    <string name="select_email_app">Select email application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="preferences">Preferences</string>
    <string name="success_saving_journey">journey was successfully saved</string>
    <string name="error_creating_file">Could not create new file.</string>
    <string name="success_saving_receipt">Receipt successfully saved!</string>
</resources>
