<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <Button android:text="@string/enter_journey" 
    		android:id="@+id/button_enter_journey"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content">
    </Button>
    <Button android:text="@string/list_journeys" 
    		android:id="@+id/button_list_journeys"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content">
    </Button>
    <Button android:text="@string/enter_receipt" 
    		android:id="@+id/button_enter_receipt"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content">
    </Button>
    <Button android:text="@string/list_receipts"  
    		android:id="@+id/button_list_receipts"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content">
    </Button>
    <Button android:text="@string/enter_time" 
    		android:id="@+id/button_enter_time"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content">
    </Button>
</LinearLayout>
