<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">
	<include 
		layout="@layout/title_bar" 
		android:id="@+id/titleBar" 
		android:layout_alignParentTop="true" 
	/>
	<ScrollView 
		android:id="@+id/scrollView" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:layout_below="@+id/titleBar">
		<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
			<TextView 
				android:id="@+id/descriptionLabel"
				style="@style/Label"
				android:layout_alignParentTop="true"
				android:text="@string/description" >
			</TextView>
			<AutoCompleteTextView 
				android:id="@+id/textView_description"
				style="@style/defaultView"
				android:text="@string/description"
				android:layout_below="@+id/descriptionLabel">
			</AutoCompleteTextView>
			<TextView 
				android:id="@+id/startLabel"
				style="@style/Label"
				android:text="@string/starting_place" 
				android:layout_below="@+id/textView_description">
			</TextView>
			<Spinner 
				android:id="@+id/spinner_pick_start_location"
				style="@style/defaultView"
				android:text="@string/starting_place" 
				android:layout_below="@+id/startLabel">
			</Spinner>
			<TextView 
				android:id="@+id/destinationLabel"
				style="@style/Label"
				android:text="@string/destination" 
				android:layout_below="@+id/spinner_pick_start_location">
			</TextView>
			<Spinner
			 	android:id="@+id/spinner_pick_end_location"
				style="@style/defaultView"
				android:text="@string/destination" 
				android:layout_below="@+id/destinationLabel">
			</Spinner>
			<RadioGroup android:id="@+id/radioGroupType"
				android:orientation="horizontal" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_below="@+id/spinner_pick_end_location">
				<RadioButton 
					android:id="@+id/radioArrival"
					android:layout_height="wrap_content" 
					android:layout_width="wrap_content" 
					android:text="@string/arrival"
					android:checked="true">
				</RadioButton>
				<RadioButton android:id="@+id/radioContinuation"
					android:layout_height="wrap_content" 
					android:layout_width="wrap_content"
					android:text="@string/continuation_of_journey">
				</RadioButton>
				<RadioButton android:id="@+id/radioReturn"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/return_journey">
				</RadioButton>
			</RadioGroup>
			<Button			 
				android:id="@+id/buttonPickJourney" 
				style="@style/defaultView"
				android:text="Düsseldorf 28/08" 
				android:visibility="gone"
				android:layout_below="@+id/radioGroupType">
			</Button>
			<TextView 
				android:id="@+id/textViewStartTime"
				style="@style/Label"
				android:text="@string/journey_start_time" 
				android:layout_below="@+id/buttonPickJourney">
			</TextView>
			<de.inovex.app.views.DateTimePicker
				android:id="@+id/dateTimePicker_start_time" 
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/textViewStartTime" >
			</de.inovex.app.views.DateTimePicker>
			<TextView 
				android:id="@+id/textViewEndTime"
				style="@style/Label"
				android:text="@string/journey_end_time" 
				android:layout_below="@+id/dateTimePicker_start_time">
			</TextView>
			<de.inovex.app.views.DateTimePicker
				android:id="@+id/dateTimePicker_end_time" 
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/textViewEndTime" >
			</de.inovex.app.views.DateTimePicker>
		</RelativeLayout>
	</ScrollView>
	<Button 
			android:id="@+id/buttonOk"
			style="@style/defaultView"
			android:layout_height="wrap_content" 
			android:text="@string/ok" 
			android:layout_width="match_parent"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/scrollView">
	</Button>
</RelativeLayout>
