<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">
	<include 
		layout="@layout/title_bar" 
		android:id="@+id/titleBar" 
		android:layout_alignParentTop="true" 
	/>
	<ScrollView 
		android:id="@+id/timeScrollView" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:layout_below="@+id/titleBar">
		<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="right">
			<TextView 
				android:id="@+id/timeDescriptionLabel"
				style="@style/Label"
				android:layout_alignParentTop="true"
				android:text="@string/description" >
			</TextView>
			<AutoCompleteTextView 
				android:id="@+id/timeDescriptionTextView"
				style="@style/defaultView"
				android:text="@string/description"
				android:layout_below="@+id/timeDescriptionLabel">
				<requestFocus></requestFocus>
			</AutoCompleteTextView>
			<TextView 
				android:id="@+id/timeProjectLabel"
				style="@style/Label"
				android:text="@string/project"
				android:layout_below="@+id/timeDescriptionTextView">
			</TextView>
			<AutoCompleteTextView 
				android:id="@+id/timeProjectTextView"
				style="@style/defaultView"
				android:text="@string/project"
				android:layout_below="@+id/timeProjectLabel">
			</AutoCompleteTextView>
			<TextView 
				android:id="@+id/timeStartTextView"
				style="@style/Label"
				android:text="@string/work_start_time" 
				android:layout_below="@+id/timeProjectTextView">
			</TextView>
			<de.inovex.app.views.DateTimePicker
				android:id="@+id/timeStartDateTimePicker" 
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/timeStartTextView" >
			</de.inovex.app.views.DateTimePicker>
			<TextView 
				android:id="@+id/timeEndTextView"
				style="@style/Label"
				android:text="@string/work_end_time" 
				android:layout_below="@+id/timeStartDateTimePicker">
			</TextView>
			<de.inovex.app.views.DateTimePicker
				android:id="@+id/timeEndDateTimePicker" 
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/timeEndTextView" >
			</de.inovex.app.views.DateTimePicker>
			<TextView 
				android:id="@+id/timeTotalLabel"
				style="@style/Label"
				android:text="@string/work_total_time"
				android:layout_below="@+id/timeEndDateTimePicker">
			</TextView>
			<TextView 
				android:id="@+id/timeTotalValue"
				style="@style/Label"
				android:text="@string/work_time" 
				android:layout_below="@+id/timeTotalLabel">
			</TextView>
		</RelativeLayout>
	</ScrollView>
	<Button 
			android:id="@+id/buttonOk"
			android:layout_height="wrap_content" 
			android:text="@string/ok" 
			android:layout_width="match_parent"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/timeScrollView">
	</Button>
</RelativeLayout>
