<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">
    <TextView 	
		android:id="@+id/textview_journey_label"
		android:text="@string/manage_records"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="22dip"
	/>  
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@drawable/main_menu_section_background">
    <Button 
    	android:text="@string/list_contacts"  
		android:id="@+id/button_list_contacts"
		android:layout_width="match_parent" 
		android:layout_marginTop="10dip"
		android:drawableLeft="@drawable/ic_menu_contacts"
		android:layout_height="wrap_content" />	
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
    	<Button android:text="@string/list_times"  
    		android:id="@+id/button_list_times"
    		android:layout_width="wrap_content" 
    		android:drawableLeft="@drawable/time_icon"
    		android:layout_weight="1"
    		style="@style/MainMenuButton">
    	</Button>
    	<Button android:text="@string/list_journeys" 
	    		android:id="@+id/button_list_journeys"
	    		android:layout_width="wrap_content" 
	    		android:drawableLeft="@drawable/travel_icon"
	    		android:layout_weight="1"
    			style="@style/MainMenuButton">
	    </Button>
	    <Button android:text="@string/list_receipts"  
    		android:id="@+id/button_list_receipts"
    		android:layout_width="wrap_content" 
    		android:drawableLeft="@drawable/receipt_icon"
    		android:layout_weight="1"
    		style="@style/MainMenuButton">    		
    	</Button>
    </LinearLayout>  
    </LinearLayout>
</LinearLayout>
