<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">
	<TextView 	
		android:id="@+id/textview_time_label"
		android:text="@string/time_recording"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="22dip"
	/>    
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
  		android:background="@drawable/main_menu_section_background"
	>
		<LinearLayout 
			android:orientation="vertical"
			android:layout_weight="1"		
			android:layout_width="0dip"
			android:layout_height="wrap_content"
		>
			<TextView 	
				android:id="@+id/textview_in_time_label"
				android:text="@string/in_time"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="15dip"
				android:gravity="center"	
			/>    
			<ViewSwitcher
				android:id="@+id/viewswitcher_check_in"
				android:layout_width="fill_parent"
   			 	android:layout_height="30dip">
   			 	<TextView 	
					android:id="@+id/textview_in_time"
					android:text="8:45"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:textSize="20dip"
					android:gravity="center"
				/>    
				<Button 
					android:id="@+id/button_check_in"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/check_in"
				/>
    		</ViewSwitcher>
		</LinearLayout>
			<LinearLayout 
			android:orientation="vertical"
			android:layout_weight="1"		
			android:layout_width="0dip"
			android:layout_height="wrap_content"
		>
			<TextView 	
				android:id="@+id/textview_out_time_label"
				android:text="@string/out_time"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="15dip"
				android:gravity="center"
			/>    
			<ViewSwitcher
				android:id="@+id/viewswitcher_check_out"
				android:layout_width="fill_parent"
   			 	android:layout_height="30dip">
   			 	<TextView 	
					android:id="@+id/textview_out_time"
					android:text="12:30"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:textSize="20dip"
					android:gravity="center"
				/>    
				<Button 
					android:id="@+id/button_check_out"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/check_out"
				/>
    		</ViewSwitcher>
		</LinearLayout>
		<LinearLayout 
			android:orientation="vertical"
			android:layout_weight="1"		
			android:layout_width="0dip"
			android:layout_height="wrap_content">
			<TextView 	
				android:id="@+id/textview_total_time_label"
				android:text="@string/total_time"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="15dip"
				android:gravity="center"
			/>    
			<TextView 	
				android:id="@+id/textview_total_time"
				android:text="4:30"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="20dip"
				android:gravity="center"
			/>    
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
