<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">
  	<TextView 	
		android:id="@+id/textview_journey_label"
		android:text="@string/journey_recording"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="22dip"
	/>  
		<ViewFlipper
				android:id="@+id/viewswitcher_new_journey"
				android:layout_width="fill_parent"
				android:background="@drawable/main_menu_section_background"
   			 	android:layout_height="match_parent"> 			 	
   			 	<LinearLayout
   			 		android:layout_width="match_parent"
   			 		android:layout_height="match_parent"
   			 		android:orientation="vertical">  
   			 		<TextView 
   			 			android:id="@+id/textview_first_journey"
   			 			android:layout_width="match_parent"
   			 			android:layout_height="30dip"
   			 			android:text="Aug 08 - Düsseldorf -> Karlsruhe"/>
					<LinearLayout 
						android:layout_width="fill_parent"
	   				 	android:layout_height="match_parent"
	   				 	android:orientation="horizontal"> 
						<Button 
							android:id="@+id/button_start_return_journey"
							android:layout_width="0dip"
							android:layout_weight="1"
							android:layout_height="match_parent"
							android:text="@string/new_return_journey"
						/>
						<Button 
							android:id="@+id/button_start_continuation_journey"
							android:layout_width="0dip"
							android:layout_weight="1"
							android:layout_height="match_parent"
							android:text="@string/new_continuation_journey"
						/>
					</LinearLayout>
				</LinearLayout>
				<Button 
					android:id="@+id/button_start_new_journey"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/new_return_journey"
				/>
				<LinearLayout
   			 		android:layout_width="match_parent"
   			 		android:layout_height="match_parent"
   			 		android:orientation="vertical">
					<TextView 	
						android:text="@string/finish_journey"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="22dip"
					/>    
						<Button 
							android:id="@+id/button_finish_journey"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
	   			 			android:text="Aug 08 continuation: Düsseldorf -> Karlsruhe"/>						
				</LinearLayout>   
    		</ViewFlipper>
</LinearLayout>
