<?xml version="1.0" encoding="utf-8"?>
<merge   xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">
  <!-- 
  	<TextView 	
		android:id="@+id/textview_journey_label"
		android:text="@string/journey_recording"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="22dip"
	/>  
	-->
		<ViewAnimator
				android:id="@+id/viewanimator_new_journey"
				android:layout_width="fill_parent"
				android:background="@drawable/main_menu_section_background"
   			 	android:layout_height="match_parent"> 	
   			 	<ViewFlipper
   			 		android:id="@+id/viewflipper_start_journey"
   			 		android:layout_width="match_parent"
   			 		android:layout_height="wrap_content" >
   			 		<RelativeLayout 
   			 			android:layout_width="match_parent"
   			 			android:layout_height="wrap_content">
  				 		<de.inovex.app.views.TimePickerButton
  				 			android:id="@+id/timepicker_start_time" 
  				 			android:layout_width="wrap_content" 
  				 			android:layout_height="wrap_content" 
  				 			android:layout_alignParentTop="true" 
  				 			android:layout_alignParentLeft="true">
  				 		</de.inovex.app.views.TimePickerButton>
   			 			<Spinner 
	   			 			android:id="@+id/spinner_pick_location" 
	   			 			android:layout_height="wrap_content" 
	   			 			android:layout_width="180dip" 
	   			 			android:layout_alignParentTop="true" 
	   			 			android:layout_toRightOf="@+id/timepicker_start_time">
	   			 		</Spinner>	
	   			 		<Button 
							android:id="@+id/button_start_new_journey"
							android:layout_below="@+id/spinner_pick_location"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/enter_journey"
						/>
   			 		</RelativeLayout>
					<LinearLayout 
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
					>
						<LinearLayout 
							android:layout_width="0dip"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:orientation="horizontal"	
						>
							<LinearLayout 
								android:orientation="vertical"
								android:layout_width="match_parent"	
								android:layout_height="match_parent">
								<TextView 
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:text="@string/start"/>	
								<TextView 
									android:id="@+id/textview_start_journey"
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:text="08 Aug - Düsseldorf"/>	
							</LinearLayout>					
						</LinearLayout>
						<Button android:id="@+id/button_end_current_journey"
							android:layout_width="0dip"
							android:layout_weight="1"
							android:layout_height="wrap_content"
							android:text="@string/end_journey"/>
					</LinearLayout>   			 		
   			 	</ViewFlipper>
	
   			 	<LinearLayout
   			 		android:layout_width="match_parent"
   			 		android:layout_height="match_parent"
   			 		android:orientation="vertical">  
   			 		<TextView 
   			 			android:id="@+id/textview_first_journey"
   			 			android:layout_width="match_parent"
   			 			android:layout_height="30dip"
   			 			android:text="Aug 08 - Düsseldorf -> Karlsruhe"/>
					<LinearLayout 
						android:layout_width="fill_parent"
	   				 	android:layout_height="match_parent"
	   				 	android:orientation="horizontal"> 
						<Button 
							android:id="@+id/button_start_return_journey"
							android:layout_width="0dip"
							android:layout_weight="1"
							android:layout_height="match_parent"
							android:text="@string/new_return_journey"
						/>
						<Button 
							android:id="@+id/button_start_continuation_journey"
							android:layout_width="0dip"
							android:layout_weight="1"
							android:layout_height="match_parent"
							android:text="@string/new_continuation_journey"
						/>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
   			 		android:layout_width="match_parent"
   			 		android:layout_height="match_parent"
   			 		android:orientation="vertical">
					<TextView 	
						android:text="@string/finish_journey"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="22dip"
					/>    
						<Button 
							android:id="@+id/button_finish_journey"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
	   			 			android:text="Aug 08 continuation: Düsseldorf -> Karlsruhe"/>						
				</LinearLayout>   
    		</ViewAnimator>
</LinearLayout>
</merge>