<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@drawable/main_menu_section_background">
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
	>
		<TextView 	
			android:id="@+id/textview_date"
			android:text="Aug 2011"
			android:layout_weight="2"		
			android:layout_width="0dip"
			android:textSize="22dip"
			android:layout_height="wrap_content"
		>
		</TextView>
		 
		<LinearLayout 
			android:orientation="vertical"
			android:layout_weight="2"		
			android:layout_width="0dip"
			android:layout_height="wrap_content"
		>
			<TextView 	
				android:id="@+id/textview_total_time_label"
				android:text="@string/total_time_month"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="15dip"
			/>
			<TextView 	
				android:id="@+id/textview_total_time"
				android:text="18:00h"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
		<LinearLayout 
			android:orientation="vertical"
			android:layout_weight="2"		
			android:layout_width="0dip"
			android:layout_height="wrap_content"
		>
			<TextView 	
				android:id="@+id/textview_receipt_sum_label"
				android:text="@string/sum_of_receipts"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="15dip"
			/>
			<TextView 	
				android:id="@+id/textview_receipt_sum"
				android:text="14€"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
	</LinearLayout>
		<TextView 	
			android:id="@+id/textview_tasks_label"
			android:text="@string/open_tasks"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="22dip"
			android:background="@drawable/main_menu_section_background"
		/>
	<ListView 
		android:id="@+id/listview_tasks" 
		android:layout_width="match_parent"
		android:layout_height="100dip"
	></ListView>
</LinearLayout>
