<?xml version="1.0" encoding="utf-8"?>
	<RelativeLayout
	  android:orientation="vertical"
  	  android:layout_marginTop="10dip"
  	  xmlns:android="http://schemas.android.com/apk/res/android"
  	  android:layout_width="match_parent"
  	  android:layout_height="wrap_content">

		<!-- show current times to the user -->
		<LinearLayout 
	    	android:id="@+id/layout_container" 
	    	android:layout_width="match_parent" 
	    	android:orientation="vertical"
	    	android:background="@drawable/main_menu_section_background" 	    	 
	    	android:layout_height="wrap_content" 
	    	android:layout_alignParentTop="true"> 

				<!-- show delta, break and total time of today -->
		    	<LinearLayout 
		    	android:layout_width="match_parent"
		    	android:background="@drawable/main_menu_section_heading" 	 
		   		android:layout_height="wrap_content" 
	    		android:orientation="horizontal">
			    	<LinearLayout 
			    	android:layout_width="wrap_content"
			   		android:layout_height="wrap_content" 
		    		android:layout_weight="2"
		    		android:layout_marginLeft="4dip"
		    		android:layout_marginRight="8dip"
		    		android:orientation="horizontal">
			    	<TextView 
				    	android:id="@+id/label_saldo_time" 
				    	android:layout_width="0dip"
				    	android:layout_weight="1" 
			    		style="@style/small_dark_text"
				    	android:layout_height="wrap_content" 
			    		android:gravity="center_horizontal"		    		
				    	android:text="@string/saldo_time"/>
			    	<TextView 
				    	android:id="@+id/textview_saldo_time" 
				    	android:layout_width="0dip"
				    	android:layout_weight="1" 
			    		style="@style/small_dark_text"
				    	android:layout_height="wrap_content" 
			    		android:gravity="center_horizontal"		    	
				    	android:text="+00:30"/>
			    	</LinearLayout>
			    	<LinearLayout 
			    	android:layout_width="wrap_content"
			   		android:layout_height="wrap_content" 
		    		android:layout_weight="2"
		    		android:layout_marginLeft="8dip"
		    		android:layout_marginRight="8dip"
		    		android:orientation="horizontal">
			    	<TextView 
				    	android:id="@+id/label_break_time" 
				    	android:layout_width="0dip"
				    	android:layout_weight="1" 
			    		style="@style/small_dark_text"
				    	android:layout_height="wrap_content" 
			    		android:gravity="center_horizontal"		    		
				    	android:text="@string/break_time"/>
			    	<TextView 
				    	android:id="@+id/textview_break_time" 
				    	android:layout_width="0dip"
				    	android:layout_weight="1" 
			    		style="@style/small_dark_text"
				    	android:layout_height="wrap_content" 
			    		android:gravity="center_horizontal"		    		
				    	android:text="00:30"/>
			    	</LinearLayout>
			    	<LinearLayout 
			    	android:layout_width="wrap_content"
			   		android:layout_height="wrap_content" 
		    		android:layout_weight="2"
		    		android:layout_marginLeft="8dip"
		    		android:layout_marginRight="4dip"
		    		android:orientation="horizontal">
			    	<TextView 
				    	android:id="@+id/label_total_time" 
				    	android:layout_width="0dip"
				    	android:layout_weight="1" 
			    		style="@style/small_dark_text"
				    	android:layout_height="wrap_content" 
			    		android:gravity="center_horizontal"		    		
				    	android:text="@string/total_time"/>
			    	<TextView 
				    	android:id="@+id/textview_total_time" 
				    	android:layout_width="0dip"
				    	android:layout_weight="1" 
			    		style="@style/small_dark_text"
				    	android:layout_height="wrap_content" 
			    		android:gravity="center_horizontal"		    		
				    	android:text="08:30"/>
				    </LinearLayout>
			    </LinearLayout>

				<!-- show morning and noon start and end times of today -->
		    	<LinearLayout 
		    	android:layout_width="match_parent"
	    		android:layout_height="wrap_content" 
	    		android:layout_marginLeft="4dip"
	    		android:layout_marginRight="4dip"
	    		android:orientation="horizontal">
			    	<LinearLayout 
			    	android:layout_width="wrap_content"
			   		android:layout_height="wrap_content" 
		    		android:layout_weight="2"
		    		android:layout_marginRight="8dip"
		    		android:orientation="horizontal">
			    	<TextView 
			    		android:id="@+id/textView_morning_start_time"
				    	android:textAppearance="?android:attr/textAppearanceMedium" 
			    		style="@style/medium_light_text"
				    	android:layout_width="0dip"
			    		android:layout_weight="4"
			    		android:gravity="center_horizontal"		    		
			    		android:layout_height="wrap_content"
			    		android:text="08:00"/>
			    	 <TextView 
		 				android:layout_width="wrap_content" 
		 				android:layout_height="wrap_content" 
			    		android:layout_weight="1"
		 				android:text="-"	 				
				    	android:textAppearance="?android:attr/textAppearanceMedium" 
			    		style="@style/medium_light_text"
				    	android:gravity="center_horizontal"/>
			    	<TextView 
			    		android:id="@+id/textView_morning_end_time"
				    	android:textAppearance="?android:attr/textAppearanceMedium" 
			    		style="@style/medium_light_text"
				    	android:layout_width="0dip"
			    		android:layout_weight="4"
			    		android:gravity="center_horizontal"		    		
			    		android:layout_height="wrap_content"
			    		android:text="12:30"/>
			    	</LinearLayout>
			    	<LinearLayout 
			    	android:layout_width="wrap_content"
			   		android:layout_height="wrap_content" 
		    		android:layout_weight="2"
		    		android:layout_marginLeft="8dip"
		    		android:orientation="horizontal">
			    	<TextView 
			    		android:id="@+id/textView_noon_start_time"
				    	android:textAppearance="?android:attr/textAppearanceMedium" 
			    		style="@style/medium_light_text"
				    	android:layout_width="0dip"
			    		android:layout_weight="4"
			    		android:gravity="center_horizontal"		    		
			    		android:layout_height="wrap_content"
			    		android:text="13:00"/>
			    	 <TextView 
		 				android:layout_width="wrap_content" 
		 				android:layout_height="wrap_content" 
			    		android:layout_weight="1"
		 				android:text="-"	 				
				    	android:textAppearance="?android:attr/textAppearanceMedium" 
			    		style="@style/medium_light_text"
				    	android:gravity="center_horizontal"/>
			    	<TextView 
			    		android:id="@+id/textView_noon_end_time"
				    	android:textAppearance="?android:attr/textAppearanceMedium" 
			    		style="@style/medium_light_text"
				    	android:layout_width="0dip"
			    		android:layout_weight="4"
			    		android:gravity="center_horizontal"		    		
			    		android:layout_height="wrap_content"
			    		android:text="17:00"/>
					</LinearLayout>

	   		</LinearLayout>
   		</LinearLayout>

		<RelativeLayout 
	 		android:layout_below="@+id/layout_container" 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="-2dip"
			android:layout_marginLeft="3dip"   	
	    	android:layout_marginRight="3dip">			 	
	 		<de.inovex.app.views.TimePickerButton
	 			android:id="@+id/timepicker_enter_time"	 		
	 			android:layout_width="100dip" 
	 			android:layout_height="wrap_content"
				android:layout_marginTop="3dip"
				android:layout_alignParentTop="true"
	 			android:text="@string/enter_time">
	 		</de.inovex.app.views.TimePickerButton>	
		</RelativeLayout>

	</RelativeLayout>
